Add button with icon.

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -6,6 +6,8 @@
   <link rel = "stylesheet" href = "https://fonts.googleapis.com/icon?family=Material+Icons">
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
   <link rel = "stylesheet" href = "./css/materialize.css">
+  <link rel = "stylesheet" href = "./css/materialize-social.css">
+  <link rel = "stylesheet" href = "./css/fontAwesome.css">
   <link rel="stylesheet" href="styles/style.css">
   <script src = "./js/materialize.js"></script>
   <title>CrystalChocolate</title>
@@ -25,7 +27,10 @@
   <ul class="collapsible" id="collaps">
     <li>
       <div class="collapsible-header valign-wrapper" id="inicio">inicio</div>
-      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+      <div class="collapsible-body">
+        <a class="waves-effect waves-light btn-large social github" id="ghb">
+        <i class="fa fa-github"></i> Sign in with github</a>
+      </div>
     </li>
     <li>
       <div class="collapsible-header valign-wrapper" id="que">¿Qué es la chocosfera?</div>
