--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tag above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <link rel="stylesheet" href="../styles/reset.css">
+    <link rel = "stylesheet" href = "https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+    <link rel = "stylesheet" href = "../css/materialize.css">
+    <link rel = "stylesheet" href = "../css/materialize-social.css">
+    <link rel = "stylesheet" href = "../css/fontAwesome.css">
+    <link rel="stylesheet" href="../styles/style.css">
+    <script src = "../js/materialize.js"></script>
+    <title>CrystalChocolate</title>
   </head>
   <body>
     <div id="root"></div>
